# PAIPAI

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  element.cpp  element.h  mcpaipai.cpp
docs/: architecture.md  findinter.md  finiteT_design.md  known_issues.md  roadmap.md  search.md
example/: gpu_finiteT.sh  struc.in
examples/: cpu_search.sh  gpu_finiteT.sh  struc_NbTaTiHf_Bulk_B.in  struc_NbTaTiHf_GB_BO.in  struc_TiVCrRe_Slab.in
examples/findinter_demo/: sites_B_r055_f090_g100.vasp  struc_B_r055_f090_g100.in
include/: constants.h  findinter.h  structure.h
script/: run_paipai.sh  slow_worker.py
scripts/: fast_worker.py  paipai.in  slow_worker.py
src/: constants.cpp  findinter.cpp  findinter_main.cpp  mcpaipai.cpp  structure.cpp  structure.h
